# uni_coursework

./: .gitignore
3_sem/JNP/2/implementation/: cmain.c  main.cc  strdeque.cc  strdeque_test1.c  strdequeconst.cc  strdequeconst.h
3_sem/JNP/3/: geometry.cc  geometry.h  main.cc  makefile  point.cc  point.h  rectangle.h
3_sem/JNP/3/rst/: geometry.h  main.cpp
3_sem/JNP/4/: citizen.cc  log  monster  smalltown.cc  smalltown.h
3_sem/JNP/4/cur/: citizen  horror_example.cc  main.cpp  smalltown.h  test1
3_sem/JNP/5/: compile_err_tests.cpp  main  script.sh  unit_tests.cpp  virus_genealogy.h
3_sem/JNP/6/: citizen.cc  horror_example  horror_example.cc  horror_movie_2  makefile  smalltown.cc  smalltown.h  ss
3_sem/JNP/7/: main  main.cc  tree.h
3_sem/PW/10/cpp-lab4/: -lab4.tgz  atomic-volatile  peterson  peterson.cpp
3_sem/PW/11/lab11/: child-poll  child-poll.c  exec  fork  hello-world.c  line_lol.c  parent-dup  parent-dup.c  parent-poll  parent-poll.c  tree  wait
3_sem/PW/12/lab12/: CMakeLists.txt  barrier  barrier.c  exchange  exchange.c  more_info  more_info.c  rt_sig  rt_sig.c  signal_mask  signal_mask.c  signals_in_terminal  signals_in_terminal.c
3_sem/PW/13/lab13/: CMakeLists.txt  buffer  buffer.c  get_memory  get_memory.c  send_message  send_message.c  send_message_protected  send_message_protected.c  unnamed_memory  unnamed_memory.c  unnamed_memory_protected  unnamed_memory_protected.c
3_sem/PW/13/lab13/final/: CMakeLists.txt  buffer
3_sem/PW/14/lab14/: CMakeLists.txt  primes  primes.c  producer-consumer  producer-consumer.c  readers-writers
3_sem/PW/14/lab14/final/: CMakeLists.txt  err.c  err.h  readers-writers.c
3_sem/PW/6/: Problem1.java  Problem2.java
3_sem/PW/7/cpp-lab1/: args  grep-seq  promise  promise-exception.cpp  res  res.cpp  thread  thread-detached  thread-join.cpp  thread-raii  thread-raii.cpp  thread.cpp  word-counter.cc
3_sem/PW/8/cpp-lab2/: CMakeLists.txt  condition  condition.cpp  lock.cpp  log.h
3_sem/PW/9/cpp-lab2/: barrier  mutex.cpp  thread-local  thread-local.cpp
3_sem/PW/9/cpp-lab3/: CMakeLists.txt  merge-sort  tasks-tids  tasks-tids.cpp
3_sem/PW/assignment1/gra/: Akcja.java  Kierunek.java  MojaPlansza.java
3_sem/PW/egs/: matmul  philosophers  readwrite
3_sem/PW/kolos/: DiscoDemo.java  microfilms
3_sem/PW/zal2/: 1  brandes.cc  coordinate_compressor.h  dane-2.txt  fbout  in  log  out1  out2  outkohano3  stats_script.py  testall.sh  wikiout
3_sem/PW/zal2/futures/: brandes.cc
3_sem/PW/zal2/raport/: raport.tex
3_sem/PW/zal2/rost/: brandes  (+2 more)
3_sem/PW/zal3/: README  circuit  input.txt  log  main  testgen.py  valgrind
3_sem/crypto/: e.py
3_sem/db/: DBLoader.py  admesg.py  collection.py  dbscript  model.py  parser.py  projekt.txt  query  test
3_sem/db/dblabapp/: models.py  urls.py
3_sem/german/: elon_musk.txt  idiomy.txt  opinia.txt  reading.txt
4_sem/SIK/zadanie_2/: CMakeLists.txt  Client.cpp  Client.h  ClientConfig.cpp  ClientConfig.h  ClientConnection.cpp  ClientConnection.h  ClientMain.cpp  ClientMessage.cc  ClientMessage.h  CommonConfig.cpp  CommonConfig.h  Event  Event.cc  Event.h  Exceptions.h  Fail.cpp  Fail.h  GUIConnection.cpp  GUIConnection.h  Game.cpp  Game.h  GameEventListener.cpp  GameEventListener.h  GameManager.cpp  GameManager.h  GameOverEvent.cc  GameOverEvent.h  GameTests.cpp  MessageLoops.cpp  MessageLoops.h  MessengerThread.cpp  MessengerThread.h  NewGameEvent.cc  NewGameEvent.h  PixelEvent.cc  PixelEvent.h  PlayerEliminatedEvent.cc  PlayerEliminatedEvent.h  Position.cpp  (+22 more)
4_sem/SIK/zadanie_2/Testing/Temporary/: CTestCostData.txt
4_sem/SIK/zadanie_2/gui/: ReadMe.1st  cmd.c  gui1  gui1.c  gui1.h  net.c
4_sem/SO/: update.sh
4_sem/SO/3/: README  jumper.asm  loop.asm  makefile  prepare.sh  upload.sh  usr.sh  vm_run.sh  vm_setup.sh
4_sem/SO/4/: loop.asm  makefile  upload.sh  vm_run.sh  vm_setup.sh
4_sem/SO/5/: clean0  do_all.sh  prepare.sh  sprawdzanie.txt  test1.sh  upload.sh  vm_run.sh  vm_run_nokvm.sh  zadanie5.html
4_sem/SO/6/: a  a.c  b  b.c  helloN.h  mnt.sh  nl_hello.c  zadanie6.txt
4_sem/SO/duze/: ProgrammingPatched  a  a.c  disc.sh  makefile  prepare.sh  read.c  run.sh  upload.sh  ws374078.patch  zadanie7.md
4_sem/appWWW/appWWW/: README  download.py  generate.sh  kraj.py  makefile  manage.py  output.html  parse.py  pkw2000.csv  populate.py  style.css  test.py  utility.py  wojewodztwa.py
4_sem/io/: zaliczanie
4_sem/jnp2/2/: .eslintrc  evaluator.js
JNP/2/: statement.txt
JNP/2/implementation/: cmain.c  cstrdeque  cstrdequeconst  main.cc  makefile  strdeque.cc  strdeque.h  strdeque_test2a.cc  strdeque_test2b.cc
JNP/3/: main  main.cc  makefile  vector  vector.cc  vector.h
JNP/3/rst/: geometry.cc
JNP/4/: citizen.h  horror_example  horror_example.cc  monster.cc  monster.h
JNP/4/cur/: citizen.h  horror_example  log  main  main.cpp  monster  monster.h  test1.cpp
JNP/5/: exception_tests  exception_tests.cpp  main.cc  performance_tests.cpp  virus.h
JNP/6/: citizen  citizen.cc  citizen.h  helper.cc  helper.h  horror_example.cc  monster.cc  monster.h  smalltown.cc  smalltown.h
PW/10/cpp-lab4/: CMakeLists.txt  dekker  dekker.cpp  lockfree-stack  lockfree-stack.cpp  mutual-excl  mutual-excl.cpp
PW/11/lab11/: CMakeLists.txt  child-pipe  child-pipe.c  child-poll  exec  exec.c  fork  fork.c  hello-world  line  line.c  line_rec.c  parent-dup  parent-pipe  parent-pipe.c  parent-poll  tree  tree.c  wait  wait.c
PW/7/cpp-lab1/: CMakeLists.txt  args.cpp  grep-seq.cpp  input.txt  promise-exception  promise.cpp  thread-detached.cpp  thread-join  word-counter
PW/7/cpp-lab1/data-txt/: burza.txt  komedia-omylek.txt  makbet.txt  poskromienie-zlosnicy.txt
PW/9/cpp-lab2/: barrier.cpp  lock  mutex
PW/9/cpp-lab3/: parallel-sum  parallel-sum.cpp
PW/kolos/: Skill.java  microfilms.cc  readwrite  readwrite.cc  test.java
PW/zal2/: CMakeLists.txt  brandes  brandes.cc  dane-1.txt  makefile
PW/zal3/: CMakeLists.txt  list.c  list.h  main.c  makefile  message.c  message.h  node.c  node.h  utility.c  utility.h
db/dblabapp/: apps.py  parser.py  views.py
german/: przydatkowe.txt
(+124 files in other folders)
